# rpg-llm

./: .gitignore  README.md  main.py  pyproject.toml
rpg_agent/: agent.py  agents.py  control_interface.py  execute_keystroke.py  hover_search.py  llm_predictor.py  models.py  tools.py  trash_agents.py  utils.py
rpg_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rpg_agent/game_state/: stats_catalogue.py
tests/: test_base_agent.py
