[project]
name = "rpg_agent"
version = "0.0.1"
description = "An agent that helps you play Divinity Original Sin II."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34.2",
    "instructor>=1.4.1",
    "mistralai>=1.1.0",
    "openai>=1.50.2",
    "pip>=24.2",
    "pillow>=10.4.0",
    "pyobjc-framework-Quartz>=10.3.1",
    "python-dotenv>=1.0.1",
    "PyWinCtl>=0.4.1",
    "weave>=0.51.12",
    "uv>=0.4.17",
    "black>=24.8.0",
    "isort>=5.13.2",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "transformers>=4.46.2",
    "torch>=2.5.1",
    "mss>=9.0.2",
    "ultralytics>=8.3.31",
    "timm>=0.9.1",
    "einops>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]